[package]
name = "http-content-range"
version = "0.1.2"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/http-content-range"
description = "HTTP Content Range response header parser"
license = "MIT OR Apache-2.0"
keywords = ["http", "headers", "content-range"]
categories = ["network-programming", "web-programming::http-client"]
edition = "2021"
